--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ img{
 .cover-img{
     height: auto;
     width: 100%;
-    padding: 3vw;
+    padding: 0;
     margin: 0;
 }
 
@@ -122,7 +122,6 @@ label{
     margin-top: 2vw;
     margin-bottom: 0.5vw;
     max-width: 30%;
-    max-height: 10%;
 }
 
 .caption{
