--- a/css/styles.css
+++ b/css/styles.css
@@ -126,22 +126,23 @@ label{
 
 .caption{
     text-align: center;
+    margin-right: 8vw;
     font-family: courier new;
     font-weight: normal;
     font-size: 1em;
     margin-top: 1vw;
 }
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 992px) {
     .flex-item{
-        max-width: 50%;
+         max-width: 47%;
     }
     img{
         width: 90%;
     }
 }
 
-@media only screen and (max-width: 700px) {
+@media only screen and (max-width: 600px) {
     .flex-item{
         max-width: 100%
     }
